refactor: Update code structure without changing functionality